[package]
name = "atlas-view-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlas-common = { path = "../Atlas-Common" }
atlas-communication = { path = "../Atlas-Communication" }
atlas-core = { path = "../Atlas-Core" }
atlas-metrics = {path = "../Atlas-Metrics"}
log = "0.4.20"